--- a/projetocafeteria/index.html
+++ b/projetocafeteria/index.html
@@ -24,7 +24,7 @@
         </a>
 
         <nav class="navbar">
-            <a href="#home">home</a>
+            <a href="#home">início</a>
             <a href="#about">sobre</a>
             <a href="#menu">cardápio</a>
             <a href="#products">produtos</a>
@@ -422,7 +422,7 @@
         </div>
 
         <div class="links">
-            <a href="#">home</a>
+            <a href="#">início</a>
             <a href="#">sobre</a>
             <a href="#">cardápio</a>
             <a href="#">produtos</a>
