--- a/projetoinformatica/index.html
+++ b/projetoinformatica/index.html
@@ -16,6 +16,8 @@
     <script src="https://kit.fontawesome.com/9cb9deffa7.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <!-- cabeçalho do corpo da página -->
     <header class="cabecalho">
         <h1 class="logo">
             <a href="index.html" title="Loja de Informática do Alves">Loja de Informática - Alves</a>
@@ -25,6 +27,8 @@
             <button><i class="fa-solid fa-magnifying-glass"></i> </button>
         </form>
     </header>
+
+    <!-- menu de navegação -->
     <nav class="menu">
       <ul>
           <li><a href="#home">Home</a></li>
@@ -38,6 +42,8 @@
           <a href="#" class="btn-google"><i class="fa-brands fa-google"></i></a>
       </div>
     </nav>
+
+    <!-- conteúdo principal -->
     <main class="principal">
         <article class="sobre">
             <h2>Sobre Nós</h2>
@@ -60,6 +66,8 @@
             </ul>
         </aside>
     </main>
+
+    <!-- seção newsletter -->
     <section class="newsletter">
         <h3>Newsletter</h3>
         <p>Receba nossas promoções por email</p>
@@ -69,6 +77,8 @@
             <button> Cadastrar </button>
         </form>
     </section>
+
+    <!-- rodapé do corpo da página -->
     <footer class="rodape">
         <p> &copy; Loja de Informática do Alves - Todos os direitos reservados </p>
     </footer>
